# kex

./: Cargo.toml  README.md
docs/: kex-payload.odg
exemples/payload_exe/: Cargo.toml
exemples/payload_exe/src/: lib.rs
kex_app/: Cargo.toml
kex_app/src/: args.rs  main.rs
kex_bootstrap/: Cargo.toml
kex_bootstrap/src/: lib.rs
kex_domain/: Cargo.toml
kex_domain/src/: lib.rs
kex_domain/src/Entitys/: Envent.rs  Payload.rs  mod.rs
kex_domain/src/Enums/: mod.rs
kex_domain/src/entitys/: payload.rs
kex_domain/src/enums/: tp_enum.rs
kex_infra/: Cargo.toml  build.rs
kex_infra/src/: client.rs  lib.rs  native_exec.rs  server.rs
kex_infra/src/dto/: ClientOptions.rs  client_options.rs  mod.rs  server_options.rs
kex_tools/: Cargo.toml
kex_tools/src/: main.rs
