[package]
name = "kex_infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kex_domain = { path = "../kex_domain" }
pnet = "0.35"
hex = "0.4.3"
rand = "0.8.4"
libc = "0.2.110"
[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_System_Memory"    
]

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.29.0"
libc = "0.2.110"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0", features = ["parallel"] }